infrastructure/openbao/configs/openbao-server/reference-grant.yaml
# Permite que HTTPRoutes no namespace gateway-api referenciem
# o Service openbao-restapi neste namespace (gateway API cross-namespace routing)
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: openbao-server
  namespace: openbao
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-api
  to:
    - group: ""
      kind: Service
      name: openbao-restapi
